prover-ray/zkcdriver/testdata/synced/invalid/for_03.zkc
//error:4:17-18:invalid condition
fn f(x:u8) -> (r:u8) {
  r = 0
  for i:u8 = 0; i = x; i = i + 1 {
    r = r + 1
  }
  return
}
